crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__57_fn_refinement_on_generic_rejected.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<PARSE_FAILED: ["T226"]>
