crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__71_cap_smuggle_option_generic.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<TYPE_CHECK_FAILED: ["T242"]>
