crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__72_cap_smuggle_result_ctor.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<TYPE_CHECK_FAILED: ["T046", "T242"]>
