crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__76_region_escape.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<TYPE_CHECK_FAILED: ["T254"]>
