crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__77_refinement_xfield_symbolic.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<TYPE_CHECK_FAILED: ["T216"]>
