crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__79_u256_wide_refinement_fail.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<TYPE_CHECK_FAILED: ["T210"]>
