crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__80_refinement_xfield_undeclared_rhs.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<TYPE_CHECK_FAILED: ["T120"]>
