crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__80_u256_wide_refinement_pass.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [
            LiteralFits {
                clause: RefinementClause {
                    field: "amount",
                    op: Le,
                    rhs: LiteralWide(
                        [
                            7886392056514347008,
                            5421010862,
                            0,
                            0,
                        ],
                    ),
                    span: Span {
                        start: 645,
                        end: 691,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
                value: Narrow(
                    5,
                ),
                site: Span {
                    start: 756,
                    end: 773,
                    source: SourceId(
                        4294967295,
                    ),
                },
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "T210",
                    ),
                    severity: Error,
                    message: "record construction violates refinement: field `amount` supplied with literal `5`, but predicate `amount <= 100000000000000000000000000000` is refutable",
                    hint: None,
                    span: Some(
                        Span {
                            start: 756,
                            end: 773,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
                on_timeout: Diagnostic {
                    code: DiagnosticCode(
                        "T210",
                    ),
                    severity: Error,
                    message: "Z3 timed out within rlimit budget while discharging refinement on field `amount` against literal `5`; treat as a budget-exceeded variant of T210 (no counterexample available)",
                    hint: None,
                    span: Some(
                        Span {
                            start: 756,
                            end: 773,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
        ],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [],
    },
}
