crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__90_restrict_chain_callee_reject.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [
            AirCapabilityObligation {
                var_id: VarId(
                    0,
                ),
                cap_type: "Fuel",
                required_mask: 3,
                actual_mask: 3,
                kind: Call,
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "C003",
                    ),
                    severity: Error,
                    message: "`f` has `Fuel` authority {burn, query} but call site requires {burn, query} (missing: {(none)})",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1015,
                            end: 1069,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
            AirCapabilityObligation {
                var_id: VarId(
                    2,
                ),
                cap_type: "Fuel",
                required_mask: 3,
                actual_mask: 1,
                kind: Call,
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "C003",
                    ),
                    severity: Error,
                    message: "`restricted` has `Fuel` authority {burn} but call site requires {burn, query} (missing: {query})",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1171,
                            end: 1190,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
        ],
    },
}
