crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__91_partial_authority_three_facet.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [
            AirCapabilityObligation {
                var_id: VarId(
                    2,
                ),
                cap_type: "Fuel",
                required_mask: 7,
                actual_mask: 4,
                kind: Call,
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "C003",
                    ),
                    severity: Error,
                    message: "`admin_only` has `Fuel` authority {admin} but call site requires {burn, query, admin} (missing: {burn, query})",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1233,
                            end: 1253,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
        ],
    },
}
